fix:z-index 調整

--- a/src/sass/layout/layout.scss
+++ b/src/sass/layout/layout.scss
@@ -319,7 +319,7 @@ header {
   position: absolute;
   top: 30px;
   right: 20px;
-  z-index: 999;
+  z-index: 1200;
   .title {
     margin: 0 1em;
     span {
